Add start script to spigot_start.sh